# kirum

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/bureaucracy/: readme.md
examples/conditionals/: readme.md
examples/generate_daughter/: readme.md
examples/rhai/: readme.md
kirum/: Cargo.toml
kirum/example_files/: example_daughter_transform.json  example_global.json  example_graph.json  example_tmpl.hbs  example_transforms.json
kirum/example_files/etymology/: example_daughter_transform.json  example_transforms.json
kirum/example_files/tree/: example_graph.json
kirum/src/: cli.rs  entries.rs  files.rs  generate.rs  global.rs  import.rs  main.rs  new.rs  stat.rs  tmpl.rs
kirum/src/ingest/: json.rs  lines.rs  mod.rs  overrides.rs
kirum/src/test_files/: test_phonetics.json  test_tmpl_vars.toml
kirum/src/test_files/repeated_keys/etymology/: ety.json
kirum/src/test_files/repeated_keys/tree/: repeated_keys.json  second_file.json
kirum/src/test_files/test_der/etymology/: daughter.json
kirum/src/test_files/test_der/tree/: test_daughter.json
kirum/src/test_files/test_ingest/: basic_lines.txt
kirum/src/test_files/with_phonetic_rules/phonetics/: rules.json
kirum/src/test_files/with_phonetic_rules/tree/: with_phonetic_rules.json
libkirum/: Cargo.toml
libkirum/src/: errors.rs  kirum.rs  lemma.rs  lexcreate.rs  lib.rs  matching.rs  transforms.rs  word.rs
libkirum/testfiles/: basic.rhai  language.rhai  pos.rhai  return_array.rhai  test.rhai  unicode_handle.rhai
src/: kirum.rs  lib.rs  matching.rs  reader.rs  transforms.rs  word.rs
(+32 files in other folders)
