[package]
name = "kirum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = {version = "3.2.11", features = ["derive"] }
libkirum = { path = "../libkirum" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.2.1"
handlebars = "4.3.6"