[package]
name = "kirum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = {version = "4.2", features = ["derive"] }
libkirum = { path = "../libkirum" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.2.1"
handlebars = {version="4.3.7", features=["script_helper"]}
serde_with = {version = "3.0.0", features= ["json"]}
walkdir = "2.3.3"
log = "0.4.0"
env_logger = "0.9.0"
tabled = "0.12.1"
toml = "0.7.5"
validator = {version = "0.16.1", features = ["derive"]}