[package]
name = "libkirum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7.0"
thiserror = "1.0.38"
serde_with = {version = "3.0.0", features= ["json"]}
log = "0.4.17"
unicode-segmentation = "1.10.1"
rand = "0.8.5"
env_logger = "0.9.0"